maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  while(!estFacemur){
    droite()
  }
  droite()
  while(!estSurBiscuit){
    while (estFaceMur){
      gauche()
      }
    avance()
    droite()
    while(!estFaceMur){
      avance();droite()
    }
  }
  setDirection(Direction.EAST)
  prendBiscuit()
}